Increase the spacing between .sidebar-links--item in _secondary to $eighth-spacing-unit to fix an issue (I think) with how inline-block items display spacing in minified HTML/SVG.

--- a/app/_scss/layout/_secondary.scss
+++ b/app/_scss/layout/_secondary.scss
@@ -179,7 +179,7 @@
 }
 
 .sidebar-links--item {
-  @include rem(margin, 0 $sixteenth-spacing-unit $half-spacing-unit);
+  @include rem(margin, 0 $eighth-spacing-unit $half-spacing-unit);
 }
 
 .sidebar-links--link {
